# teefriends

./: .gitignore  Cargo.toml  README.md  lines  teefriends.py  test_info.sh
src/: main.rs  network.rs  settings.rs
