[package]
name = "teefriends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serverbrowse = { git = "https://github.com/heinrich5991/libtw2.git" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = "4.2.4"
